cores/statefulset.yaml
apiVersion: "apps/v1beta1"
kind: StatefulSet
metadata:
  name: neo4j-core
spec:
  serviceName: neo4j
  replicas: 3
  template:
    metadata:
      labels:
        app: neo4j
        component: core
    spec:
      securityContext:
        fsGroup: 65533 # nogroup
      containers:
      - name: neo4j
        image: "neo4j:3.3.0-enterprise"
        imagePullPolicy: "IfNotPresent"
        command:
          - "/bin/bash"
          - "-ecx"
          - |
            export NEO4J_dbms_connectors_default__advertised__address=$(hostname -f)
            export NEO4J_causal__clustering_discovery__advertised__address=$(hostname -f):5000
            export NEO4J_causal__clustering_transaction__advertised__address=$(hostname -f):6000
            export NEO4J_causal__clustering_raft__advertised__address=$(hostname -f):7000
            exec /docker-entrypoint.sh "neo4j"
        ports:
        - containerPort: 5000
          name: discovery
        - containerPort: 7000
          name: raft
        - containerPort: 6000
          name: tx
        - containerPort: 7474
          name: browser
        - containerPort: 7687
          name: bolt
        - containerPort: 6362
          name: backup
        securityContext:
          runAsUser: 112
        volumeMounts:
        - name: datadir
          mountPath: "/data"
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "10Gi"
