cores/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-browser
  labels:
    app: neo4j
    component: core
spec:
  type: NodePort
  ports:
    - port: 7474
      targetPort: 7474
      name: browser
      nodePort: 30080
    - port: 7687
      targetPort: 7687
      name: bolt
      nodePort: 30443
  selector:
    app: neo4j
    component: core
